fix: text overflow

--- a/asset/css/comment.css
+++ b/asset/css/comment.css
@@ -8,6 +8,10 @@
     min-width: fit-content;
 }
 
+.comment-content {
+    max-width: 520px;
+}
+
 .comment-row {
     display: flex;
     flex-direction: row;
